--- a/src/main/webapp/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/i18n/messages_fi_FI.properties
@@ -1,7 +1,7 @@
 #  (\u00F6)
 valintaryhmatlistaus.header				= Valintaryhm\u00E4t ja hakukohteet
-valintaryhmatlistaus.add.valintaryhma	= Lis\u00E4\u00E4 valintaryhm\u00E4
-valintaryhmatlistaus.add.hakukohde		= Lis\u00E4\u00E4 hakukohde
+valintaryhmatlistaus.add.valintaryhma	= valintaryhm\u00E4
+valintaryhmatlistaus.add.hakukohde		= hakukohde
 
 valintaryhmalomake.add.valinnanvaihe	= Lis\u00E4\u00E4 valinnanvaihe
 valintaryhmalomake.add.koekutsuvaihe	= Lis\u00E4\u00E4 koekutsuvaihe
