font-awesome ikoneita

--- a/src/main/webapp/i18n/messages_en_US.properties
+++ b/src/main/webapp/i18n/messages_en_US.properties
@@ -3,8 +3,8 @@ valintaryhmatlistaus.header				= Valintaryhm\u00E4t ja hakukohteet
 valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
 valintaryhmatlistaus.add.hakukohde		= Hakukohde
 
-valintaryhmalomake.add.valinnanvaihe	= Lis\u00E4\u00E4 valinnanvaihe
-valintaryhmalomake.add.koekutsuvaihe	= Lis\u00E4\u00E4 koekutsuvaihe
+valintaryhmalomake.valinnanvaihe	= valinnanvaihe
+valintaryhmalomake.koekutsuvaihe	= koekutsuvaihe
 
 koekutsuvaihe.header					= Koekutsuvaiheen muokkaus
 
