VT-874: lokalisointiavainten kerääminen aloitettu

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -12,8 +12,67 @@ jononmuokkaus.header					= Jonon muokkaus
 jononmuokkaus.siirretaan.sijoitteluun	= Siirret\u00E4\u00E4n sijoitteluun
 
 # yleiset
-valintaperusteet.periytyy.false			= ei periydy
-valintaperusteet.periytyy.true			= periytyy
-valintaperusteet.tyyppi.TAVALLINEN		= tavallinen
-valintaperusteet.tyyppi.VALINTAKOE		= koekutsu
+valintaperusteet.periytyy.false			= Ei periydy
+valintaperusteet.periytyy.true			= Periytyy
+valintaperusteet.peritty 				= Peritty
+valintaperusteet.tyyppi.TAVALLINEN		= Tavallinen
+valintaperusteet.tyyppi.VALINTAKOE		= Koekutsu
+valintaperusteet.kuvaus 				= Kuvaus
+valintaperusteet.aloituspaikat			= Aloituspaikat
+valintaperusteet.laskentakaavat 		= Laskentakaava
+valintaperusteet.poista 				= Poista
+valintaperusteet.tallenna 				= Tallenna
+valintaperusteet.maara 					= Määrä
+valintaperusteet.takaisin 				= Takaisin
+valintaperusteet.kiintio 				= Kiintiö
+valintaperusteet.liita 					= Liitä
 
+#tabit
+tabs.laskentakaavat 					= laskentakaavat
+tabs.etusivu 							= Valintaryhmät ja hakukohteet
+tabs.yhteisvalinnanhallinta 			= yhteisvalinnanhallinta
+
+#yhteisvalinnanhallinta
+yhteisvalinnanhallinta.synkronoi 		= Synkronoi tarjonta
+
+#valintatapajono
+valintatapajono.jononnimi 				= Jonon nimi
+valintatapajono.njono 					= jono
+valintatapajono.kaytetaanvalintalaskentaa = Käytetään valintalaskentaa
+valintatapajono.ehdontayttavathyvaksytaan = Kaikki ehdon täyttävät hyväksytään
+valintatapajono.tasasijasaanto 			= Tasasijasääntö
+valintatapajono.ylitaytto 				= Ylitäyttö
+valintatapajono.alitaytto 				= Alitäyttö
+valintatapajono.arvonta 				= Arvonta
+valintatapajono.aktiivinen 				= Aktiivinen
+valintatapajono.metatiedot 				= Metatiedot
+valintatapajono.kriteeri 				= Kriteeri
+valintatapajono.varasija.kasittelysaannot = Varasijakäsittelysäännöt
+valintatapajono.varasija.eitayttoa 		= Ei varasijatayttoa
+valintatapajono.varasija.eitayttoaohje 	= Jos valittu, sijoittelu pyrkii ainoastaan valitsemaan aloituspaikkojen mukaisen määrän jonon alusta, jättäen hylätyt huomioimatta. Varasijoille jääviä ei huomioida.
+valintatapajono.varasija.kaytetaanalkaen = Varasijasääntöjä käytetään alkaen
+valintatapajono.varasija.taytetaanasti 	= Varasijoja täytetään asti
+valintatapajono.varasija.huomioitavienmaararajattu = Huomioitavien varasijojen määrä rajattu
+valintatapajono.varasija.tayttopoissaolevientilalle = Varasijatäyttö poissa olevaksi ilmoittautuneiden tilalle
+valintatapajono.varasija.jostayttamattomiaohje = Jos jonoon jää täyttämättömiä aloituspaikkoja, niitä täytetään jonosta
+valintatapajono.muodostumiskriteerit.jono = Jonon muodostumiskriteerit
+valintatapajono.muodostumiskriteeri.tallennalisataksesi = Tallenna jono lisätäksesi kriteeri.
+valintatapajono.hakijaryhmat 			= Hakijaryhmat
+valintatapajono.hakijaryhmat.eisijoitteluun = Valintatapajonoa ei siirretä sijoitteluun. Hakijaryhma ei vaikuta jonoon.
+valintatapajono.hakijaryhmat.liita 		= Liitä hakijaryhmä
+valintatapajono.hakijaryhmat.tallennalisataksesi = Tallenna jono lisätäksesi hakijaryhma.
+
+
+#etusivu (valintaryhmalistaus)
+
+#valintaryhma
+
+#valintakoe
+
+#valinnanvaihe
+
+#laskentakaavat
+
+#jarjestyskriteeri
+
+#hakijaryhma
