--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -1,10 +1,5 @@
 #  (\u00F6)
-valintaryhmatlistaus.header				= Valintaryhm\u00E4t ja hakukohteet
-valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
-valintaryhmatlistaus.add.hakukohde		= Hakukohde
 
-valintaryhmalomake.valinnanvaihe	= Valinnanvaihe
-valintaryhmalomake.koekutsuvaihe	= Koekutsuvaihe
 
 koekutsuvaihe.header					= Koekutsuvaiheen muokkaus
 
@@ -12,6 +7,9 @@ jononmuokkaus.header					= Jonon muokkaus
 jononmuokkaus.siirretaan.sijoitteluun	= Siirret\u00E4\u00E4n sijoitteluun
 
 # yleiset
+valintaperusteet 						= Valintaperusteet
+valintaperusteet.hakukohde				= Hakukohde
+valintaperusteet.valintaryhma			= Valintaryhmä
 valintaperusteet.periytyy.false			= Ei periydy
 valintaperusteet.periytyy.true			= Periytyy
 valintaperusteet.peritty 				= Peritty
@@ -19,21 +17,41 @@ valintaperusteet.tyyppi.TAVALLINEN		= Tavallinen
 valintaperusteet.tyyppi.VALINTAKOE		= Koekutsu
 valintaperusteet.kuvaus 				= Kuvaus
 valintaperusteet.aloituspaikat			= Aloituspaikat
-valintaperusteet.laskentakaavat 		= Laskentakaava
+valintaperusteet.laskentakaava 			= Laskentakaava
+valintaperusteet.laskentakaavat 		= Laskentakaavat
 valintaperusteet.poista 				= Poista
 valintaperusteet.tallenna 				= Tallenna
 valintaperusteet.maara 					= Määrä
 valintaperusteet.takaisin 				= Takaisin
 valintaperusteet.kiintio 				= Kiintiö
 valintaperusteet.liita 					= Liitä
+valintaperusteet.julkaistu 				= Julkaistu
+valintaperusteet.valinnanvaihe 			= Valinnanvaihe
+valintaperusteet.koekutsuvaihe 			= Koekutsuvaihe
+valintaperusteet.haku 					= Haku
+valintaperusteet.hae 					= Hae
+valintaperusteet.ja 					= ja
+
 
 #tabit
-tabs.laskentakaavat 					= laskentakaavat
+tabs.laskentakaavat 					= Laskentakaavat
 tabs.etusivu 							= Valintaryhmät ja hakukohteet
-tabs.yhteisvalinnanhallinta 			= yhteisvalinnanhallinta
+tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 
 #yhteisvalinnanhallinta
 yhteisvalinnanhallinta.synkronoi 		= Synkronoi tarjonta
+
+#etusivu (valintaryhmalistaus)
+valintaryhmatlistaus.header				= Valintaryhm\u00E4t ja hakukohteet
+valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
+valintaryhmatlistaus.avaapuu 			= Avaa puu
+valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
+valintaryhmatlistaus.hakukohteitasisaltavat = Vain hakukohteita sisältävät ryhmät
+valintaryhmatlistaus.hakukohteet 		= Vain hakukohteet
+valintaryhmatlistaus.hakupalautti 		= Haku palautti
+valintaryhmatlistaus.valintaryhmaa 		= valintaryhmää
+valintaryhmatlistaus.hakukohdetta 		= hakukohdetta
+valintaryhmatlistaus.naytetty 			= Näytetty
 
 #valintatapajono
 valintatapajono.jononnimi 				= Jonon nimi
@@ -63,7 +81,6 @@ valintatapajono.hakijaryhmat.liita 		= Liitä hakijaryhmä
 valintatapajono.hakijaryhmat.tallennalisataksesi = Tallenna jono lisätäksesi hakijaryhma.
 
 
-#etusivu (valintaryhmalistaus)
 
 #valintaryhma
 
