--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -26,12 +26,31 @@ valintaperusteet.takaisin 				= Takaisin
 valintaperusteet.kiintio 				= Kiintiö
 valintaperusteet.liita 					= Liitä
 valintaperusteet.julkaistu 				= Julkaistu
-valintaperusteet.valinnanvaihe 			= Valinnanvaihe
+valintaperusteet.valinnanvaihe 			= Valinnan vaihe'
+valintaperusteet.valinnanvaiheet 		= Valinnan vaiheet
 valintaperusteet.koekutsuvaihe 			= Koekutsuvaihe
 valintaperusteet.haku 					= Haku
 valintaperusteet.hae 					= Hae
 valintaperusteet.ja 					= ja
-
+valintaperusteet.ryhmatjakohteet		= Valintaryhm\u00E4t ja hakukohteet
+valintaperusteet.nimi 					= Nimi
+valintaperusteet.organisaatiot 			= Organisaatiot
+valintaperusteet.tyyppi					= Tyyppi
+valintaperusteet.oid 					= Tunniste
+valintaperusteet.kiintio 				= Kiintiö
+valintaperusteet.hakijaryhmat 			= Hakijaryhmät
+valintaperusteet.hakijaryhma 			= Hakijaryhmä
+valintaperusteet.koodi 					= Koodi
+valintaperusteet.arvo 					= Arvo
+valintaperusteet.tasasijasaanto 		= Tasasijasääntö
+valintaperusteet.ylitaytto 				= Ylitäyttö
+valintaperusteet.alitaytto 				= Alitäyttö
+valintaperusteet.arvonta 				= Arvonta
+valintaperusteet.aktiivinen 			= Aktiivinen
+valintaperusteet.metatiedot 			= Metatiedot
+valintaperusteet.kriteeri 				= Kriteeri
+valintaperusteet.jononnimi 				= Jonon nimi
+valintaperusteet.njono 					= jono
 
 #tabit
 tabs.laskentakaavat 					= Laskentakaavat
@@ -42,7 +61,6 @@ tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 yhteisvalinnanhallinta.synkronoi 		= Synkronoi tarjonta
 
 #etusivu (valintaryhmalistaus)
-valintaryhmatlistaus.header				= Valintaryhm\u00E4t ja hakukohteet
 valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
 valintaryhmatlistaus.avaapuu 			= Avaa puu
 valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
@@ -53,18 +71,20 @@ valintaryhmatlistaus.valintaryhmaa 		= valintaryhmää
 valintaryhmatlistaus.hakukohdetta 		= hakukohdetta
 valintaryhmatlistaus.naytetty 			= Näytetty
 
-#valintatapajono
-valintatapajono.jononnimi 				= Jonon nimi
-valintatapajono.njono 					= jono
+#valintaryhma
+valintaryhma.ylavalintaryhma 			= Ylävalintaryhmä
+valintaryhma.hakukohdekoodit 			= Hakukohdekoodit
+valintaryhma.valintakoekoodit 			= Valintakoekoodit
+valintaryhma.uusivalintakoekoodi 		= Uusi valintakoekoodi
+valintaryhma.uusihakukohdekoodi 		= Uusi hakukohdekoodi
+valintaryhma.valintakoekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään valintakoekoodia
+valintaryhma.hakukohdekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään hakukohdekoodia
+
+
+#valintaperusteet
+
 valintatapajono.kaytetaanvalintalaskentaa = Käytetään valintalaskentaa
 valintatapajono.ehdontayttavathyvaksytaan = Kaikki ehdon täyttävät hyväksytään
-valintatapajono.tasasijasaanto 			= Tasasijasääntö
-valintatapajono.ylitaytto 				= Ylitäyttö
-valintatapajono.alitaytto 				= Alitäyttö
-valintatapajono.arvonta 				= Arvonta
-valintatapajono.aktiivinen 				= Aktiivinen
-valintatapajono.metatiedot 				= Metatiedot
-valintatapajono.kriteeri 				= Kriteeri
 valintatapajono.varasija.kasittelysaannot = Varasijakäsittelysäännöt
 valintatapajono.varasija.eitayttoa 		= Ei varasijatayttoa
 valintatapajono.varasija.eitayttoaohje 	= Jos valittu, sijoittelu pyrkii ainoastaan valitsemaan aloituspaikkojen mukaisen määrän jonon alusta, jättäen hylätyt huomioimatta. Varasijoille jääviä ei huomioida.
@@ -75,14 +95,13 @@ valintatapajono.varasija.tayttopoissaolevientilalle = Varasijatäyttö poissa ol
 valintatapajono.varasija.jostayttamattomiaohje = Jos jonoon jää täyttämättömiä aloituspaikkoja, niitä täytetään jonosta
 valintatapajono.muodostumiskriteerit.jono = Jonon muodostumiskriteerit
 valintatapajono.muodostumiskriteeri.tallennalisataksesi = Tallenna jono lisätäksesi kriteeri.
-valintatapajono.hakijaryhmat 			= Hakijaryhmat
+
 valintatapajono.hakijaryhmat.eisijoitteluun = Valintatapajonoa ei siirretä sijoitteluun. Hakijaryhma ei vaikuta jonoon.
 valintatapajono.hakijaryhmat.liita 		= Liitä hakijaryhmä
 valintatapajono.hakijaryhmat.tallennalisataksesi = Tallenna jono lisätäksesi hakijaryhma.
 
 
 
-#valintaryhma
 
 #valintakoe
 
