--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -37,6 +37,7 @@ valintaperusteet.nimi 					= Nimi
 valintaperusteet.organisaatiot 			= Organisaatiot
 valintaperusteet.tyyppi					= Tyyppi
 valintaperusteet.oid 					= Tunniste
+valintaperusteet.tunniste 				= Tunniste
 valintaperusteet.kiintio 				= Kiintiö
 valintaperusteet.hakijaryhmat 			= Hakijaryhmät
 valintaperusteet.hakijaryhma 			= Hakijaryhmä
@@ -51,6 +52,16 @@ valintaperusteet.metatiedot 			= Metatiedot
 valintaperusteet.kriteeri 				= Kriteeri
 valintaperusteet.jononnimi 				= Jonon nimi
 valintaperusteet.njono 					= jono
+valintaperusteet.kuuluusijoitteluun 	= Kuuluu sijoitteluun
+valintaperusteet.lisaa 					= Lisää
+valintaperusteet.muokkaa 				= Muokkaa
+valintaperusteet.siirra 				= Siirrä
+valintaperusteet.sulje 					= Sulje
+valintaperusteet.hakukohdekoodi 		= Hakukohdekoodi
+valintaperusteet.valintakoekoodi 		= Valintakoekoodi
+valintaperusteet.paivita 				= Päivitä
+valintaperusteet.hauntunniste 			= Haun tunniste
+valintaperusteet.valintakoevalinnanvaihe = Valintakoevalinnanvaihe
 
 #tabit
 tabs.laskentakaavat 					= Laskentakaavat
@@ -80,9 +91,12 @@ valintaryhma.uusihakukohdekoodi 		= Uusi hakukohdekoodi
 valintaryhma.valintakoekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään valintakoekoodia
 valintaryhma.hakukohdekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään hakukohdekoodia
 
+#hakukohde
+hakukohde.siirravalintaryhmaan 			= Siirrä hakukohde toiseen valintaryhmään
+hakukohde.muokkaus 						= Hakukohteen muokkaus
+hakukohde.nimi 							= Hakukohteen nimi
 
 #valintaperusteet
-
 valintatapajono.kaytetaanvalintalaskentaa = Käytetään valintalaskentaa
 valintatapajono.ehdontayttavathyvaksytaan = Kaikki ehdon täyttävät hyväksytään
 valintatapajono.varasija.kasittelysaannot = Varasijakäsittelysäännöt
@@ -95,15 +109,16 @@ valintatapajono.varasija.tayttopoissaolevientilalle = Varasijatäyttö poissa ol
 valintatapajono.varasija.jostayttamattomiaohje = Jos jonoon jää täyttämättömiä aloituspaikkoja, niitä täytetään jonosta
 valintatapajono.muodostumiskriteerit.jono = Jonon muodostumiskriteerit
 valintatapajono.muodostumiskriteeri.tallennalisataksesi = Tallenna jono lisätäksesi kriteeri.
-
+valintatapajono.jonot 					= Valintatapajonot
 valintatapajono.hakijaryhmat.eisijoitteluun = Valintatapajonoa ei siirretä sijoitteluun. Hakijaryhma ei vaikuta jonoon.
 valintatapajono.hakijaryhmat.liita 		= Liitä hakijaryhmä
 valintatapajono.hakijaryhmat.tallennalisataksesi = Tallenna jono lisätäksesi hakijaryhma.
 
-
-
-
 #valintakoe
+valintakoe.lahetetaankokutsut 			= Lähetetäänkö koekutsut
+valintakoe.kutsutaankokaikki 			= Kutsutaanko kaikki
+valintakoe.Laskentakaava 				= Valintakokeen laskentakaava
+valintakoe.kokeet 						= Valintakokeet
 
 #valinnanvaihe
 
