--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -61,7 +61,19 @@ valintaperusteet.hakukohdekoodi 		= Hakukohdekoodi
 valintaperusteet.valintakoekoodi 		= Valintakoekoodi
 valintaperusteet.paivita 				= Päivitä
 valintaperusteet.hauntunniste 			= Haun tunniste
-valintaperusteet.valintakoevalinnanvaihe = Valintakoevalinnanvaihe
+valintaperusteet.valintakoevalinnanvaihe = Valintakoevalinnan vaihe
+valintaperusteet.tyhjenna 				= Tyhjennä
+valintaperusteet.tarjoaja				= Tarjoaja
+valintaperusteet.julkaisutila 			= Julkaisutila
+valintaperusteet.kylla 					= Kyllä
+valintaperusteet.ei 					= Ei
+valintaperusteet.tosi 					= tosi
+valintaperusteet.epatosi 				= epätosi
+valintaperusteet.pakollinentieto 		= Pakollinen tieto
+valintaperusteet.kieli 					= Kieli
+valintaperusteet.pisteet 				= Pisteet
+valintaperusteet.parametri 				= Parametri
+valintaperusteet.avain 					= Avain
 
 #tabit
 tabs.laskentakaavat 					= Laskentakaavat
@@ -95,6 +107,9 @@ valintaryhma.hakukohdekoodit.eiliitettyja = Tähän valintaryhmään ei ole viel
 hakukohde.siirravalintaryhmaan 			= Siirrä hakukohde toiseen valintaryhmään
 hakukohde.muokkaus 						= Hakukohteen muokkaus
 hakukohde.nimi 							= Hakukohteen nimi
+hakukohde.luonti						= Hakukohteen luonti
+hakukohde.tunniste 						= Hakukohteen tunniste
+
 
 #valintaperusteet
 valintatapajono.kaytetaanvalintalaskentaa = Käytetään valintalaskentaa
@@ -120,10 +135,135 @@ valintakoe.kutsutaankokaikki 			= Kutsutaanko kaikki
 valintakoe.Laskentakaava 				= Valintakokeen laskentakaava
 valintakoe.kokeet 						= Valintakokeet
 
-#valinnanvaihe
+#hakijaryhma
+hakijaryhma.liitetytjonot 				= Liitetyt valintatapajonot
+
 
 #laskentakaavat
+laskentakaavat.hallinta 				= Laskentakaavojen hallinta
+laskentakaavat.lista 					= Laskentakaavalista
+laskentakaavat.eiluotuja 				= Yhtään laskentakaavaa ei ole luotu
+laskentakaavat.valintaryhmalleeiluotuja = Tälle valintaryhmälle ei ole luotu yhtään laskentakaavaa
+laskentakaavat.hakukohteelleeiluotuja 	= Tälle hakukohteelle ei ole luotu yhtään laskentakaavaa
+laskentakaavat.uusi 					= Uusi laskentakaava
+laskentakaavat.luonti 					= Uuden laskentakaavan luonti
+laskentakaavat.alusta 					= Alusta uusi laskentakaava
+laskentakaavat.tyyppi 					= Laskentakaavan tyyppi
+laskentakaavat.kuvaus 					= Laskentakaavan kuvaus
+laskentakaavat.nimi 					= Laskentakaavan nimi
+laskentakaavat.lukuarvofunktio 			= Lukuarvofunktio
+laskentakaavat.totuusarvofunktio 		= Totuusarvofunktio
+laskentakaavat.muokkaus 				= Laskentakaavan muokkaus
+laskentakaavat.generoitunniste 			= Generoi tunniste
 
-#jarjestyskriteeri
+laskentakaavat.funktioasetukset 		= Funktioasetukset
+laskentakaavat.funktioasetukset.hylkaysperuste = Hylkäysperuste
+laskentakaavat.funktioasetukset.hylkaysperustekuvaukset = Hylkäysperustekuvaukset
+laskentakaavat.funktioasetukset.poistaparametri = Poista parametri
+laskentakaavat.funktioasetukset.palautahaettu = Palauta haettu arvo
+laskentakaavat.funktioasetukset.alikaavanmuokkaus = Alikaavan funktiokutsuja ei voi muokata
+laskentakaavat.funktioasetukset.kutsuntyyppi = Funktiokutsun tyyppi
+laskentakaavat.funktioasetukset.kutsuntallennus = Funktijokutsun tallentaminen laskentakaavana
+laskentakaavat.funktioasetukset.valintaperusteviitteet = Valintaperusteviitteet
+laskentakaavat.funktioasetukset.arvomuunnin = Arvomuunnin
+laskentakaavat.funktioasetukset.konversiomaarittelyt = Konversiomäärittelyt
+laskentakaavat.funktioasetukset.arvonmaarittelyt = Arvon määrittelyt
+laskentakaavat.funktioasetukset.maarite = Määrite
+laskentakaavat.funktioasetukset.tallennatulos = Tallenna tulos
+laskentakaavat.funktioasetukset.tulostunniste = Tulostunniste
+laskentakaavat.funktioasetukset.tulosteksti = Tulosteksti
+laskentakaavat.funktioasetukset.tallennettavakutsu = Laskentakaavaksi tallennettava funktiokutsu
+laskentakaavat.funktioasetukset.osantallennus = Kaavan osan tallennus
+laskentakaavat.funktioasetukset.poistakutsu = Poista funktiokutsu
+laskentakaavat.funktioasetukset.palaaasetuksiin = Palaa funktioasetuksiin
+laskentakaavat.funktioasetukset.tallennauutenakaavana = Tallenna uutena laskentakaavana
+laskentakaavat.funktioasetukset.haettava_arvo = Arvo hakemukselta
+laskentakaavat.funktioasetukset.syotettava_arvo = Syötettävä arvo
+laskentakaavat.funktioasetukset.hakukohteen_arvo = Hakukohteen arvo
+laskentakaavat.funktioasetukset.hakukohteen_syotettava_arvo = Hakukohteen syötettävä arvo
 
-#hakijaryhma
+laskentakaavat.viiteasetukset.viitteenvalinta = Laskentakaavaviitteen valinta
+laskentakaavat.viiteasetukset.alikaavanviite = Alikaavan laskentakaavaviite
+laskentakaavat.viiteasetukset.valitunnimi = Valitun laskentakaavaviitteen nimi
+laskentakaavat.viiteasetukset.alikaavanviitemuokkaus = Alikaavan laskentakaavaviitteitä ei voi vaihtaa. Voit kuitenkin siirtyä suoraan valitsemasi laskentakaavan muokkaukseen kynä-ikonista.
+laskentakaavat.viiteasetukset.poista 	= Poista laskentakaavaviite
+
+laskentakaavat.puu.eivoitutallentaa 	= Laskentakaavaa ei voitu tallennettava
+laskentakaavat.puu.virheinfo 			= Alla olevasta listasta saat vihjeitä kaavan virheistä ja virheellisen funktiokutsun tapauksessa pääset muokkaamaan sitä suoraan klikkaamalla virheilmoitusta. Yritä laskentakaavan tallennusta uudestaan heti virheet korjattuasi.
+laskentakaavat.puu.funktiokutsussavirhe = Funktiokutsussa on virhe
+laskentakaavat.puu.tallennusonnistui 	= Laskentakaavan tallennus onnistui
+laskentakaavat.puu.paras 				= paras
+laskentakaavat.puu.huonoin 				= huonoin
+laskentakaavat.puu.keskiarvonparasta 	= suurimman keskiarvo
+laskentakaavat.puu.summanparasta 		= suurimman summa
+laskentakaavat.puu.hakutoive 			= hakutoive
+laskentakaavat.puu.summa 				= Summa
+laskentakaavat.puu.osoittaja 			= osoittaja
+laskentakaavat.puu.nimittaja 			= Nimittäjä
+laskentakaavat.puu.lukuarvo 			= Lukuarvo
+laskentakaavat.puu.painotuskerroin		= Painotuskerroin
+laskentakaavat.puu.funktioargumentti 	= Funktioargumentti
+laskentakaavat.puu.vasenoperandi 		= Vasen operandi
+laskentakaavat.puu.oikeaoperandi 		= Oikea operandi
+laskentakaavat.puu.ehto 				= Ehto
+laskentakaavat.puu.sitten 				= Sitten
+laskentakaavat.puu.muuten 				= Muuten
+laskentakaavat.puu.lisaafunktio			= Lisää uusi funktiokutsu
+
+laskentakaavat.funktiokutsu.NIMETTYLUKUARVO = Nimetty lukuarvo
+laskentakaavat.funktiokutsu.NIMETTYTOTUUSARVO = Nimetty totuusarvo
+laskentakaavat.funktiokutsu.HAELUKUARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.LUKUARVO 	= Vakio
+laskentakaavat.funktiokutsu.SUMMA 		= Summa
+laskentakaavat.funktiokutsu.JOS 		= Jos
+laskentakaavat.funktiokutsu.TULO 		= Tulo
+laskentakaavat.funktiokutsu.OSAMAARA 	= Osamäärä
+laskentakaavat.funktiokutsu.KESKIARVO 	= Keskiarvo
+laskentakaavat.funktiokutsu.MEDIAANI 	= Mediaani
+laskentakaavat.funktiokutsu.MINIMI 		= Minimi  
+laskentakaavat.funktiokutsu.MAKSIMI 	= Maksimi
+laskentakaavat.funktiokutsu.SUMMANPARASTA = N parasta summa
+laskentakaavat.funktiokutsu.KESKIARVONPARASTA = N parasta keskiarvo
+laskentakaavat.funktiokutsu.NMAKSIMI 	= N paras
+laskentakaavat.funktiokutsu.NMINIMI 	= N huonoin
+laskentakaavat.funktiokutsu.NEGAATIO 	= Negaatio
+laskentakaavat.funktiokutsu.PYORISTYS 	= Pyöristys
+laskentakaavat.funktiokutsu.HYLKAA 		= Hylkää 
+laskentakaavat.funktiokutsu.HYLKAAARVOVALILLA = Hylkää arvovälillä
+laskentakaavat.funktiokutsu.KONVERTOILUKUARVO = Konvertoi lukuarvo
+laskentakaavat.funktiokutsu.HAEOSAKOEARVOSANA = YO-osakoearvosana
+laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOILUKUARVOKSI = Hae merkkijono ja konvertoi lukuarvoksi
+laskentakaavat.funktiokutsu.SKAALAUS 	= Skaalaus
+laskentakaavat.funktiokutsu.PAINOTETTUKESKIARVO = Painotettu keskiarvo
+laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
+laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
+laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.TAI 		= Tai
+laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
+laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
+laskentakaavat.funktiokutsu.YHTASUURI = Yhtä suuri
+laskentakaavat.funktiokutsu.PIENEMPI = Pienempi
+laskentakaavat.funktiokutsu.PIENEMPITAIYHTASUURI = Pienempi tai yhtä suuri
+laskentakaavat.funktiokutsu.EI = Ei 
+laskentakaavat.funktiokutsu.TOTUUSARVO = Totuusarvo
+laskentakaavat.funktiokutsu.JA = Ja 
+laskentakaavat.funktiokutsu.DEMOGRAFIA = Demografia
+laskentakaavat.funktiokutsu.HAKUTOIVE = Hakutoive
+laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI = Hae merkkijono ja konvertoi totuusarvoksi
+laskentakaavat.funktiokutsu.HAEMERKKIJONOJAVERTAAYHTASUURUUS = Hae merkkijono ja vertaa yhtäsuuruus
+laskentakaavat.funktiokutsu.VALINTAPERUSTEYHTASUURUUS = Valintaperusteyhtasuuruus
+laskentakaavat.funktiokutsu.LASKENTAKAAVAVIITE = Viittaus toiseen kaavaan
+
+laskentakaavat.validointi.tulostunnistepuuttuu = tulostunniste täytyy määritellä, jos Tallenna tulos -kenttä on valittu
+laskentakaavat.validointi.pakollisiafunktioargumentteja = Nimetyt funktioargumentit ovat pakollisia. Funktiokutsun X funktioargumenttia ei ole määritelty
+laskentakaavat.validointi.yksipakollinenfunktioargumentti = Funktiokutsulle ei ole määritelty yhtään funktioargumenttia. Tälle funktiokutsulle on määriteltävä vähintään yksi funktioargumentti
+laskentakaavat.validointi.funktiokutsulleonmaaritelty = Funktiokutsulle on määritelty
+laskentakaavat.validointi.pakollistafunktioargumenttia = X kpl pakollista funktioargumenttia
+laskentakaavat.validointi.PAINOTETTUKESKIARVO.kaksifunktioargumenttia = Painotetulle keskiarvolle täytyy määritellä vähintään kaksi funktioargumenttia
+laskentakaavat.validointi.PAINOTETTUKESKIARVO.puuttuvafunktioargumentti = Painotetun keskiarvon funktioargumenttilistan keskellä ei voi olla määrittelemättömiä funktioargumentteja
+laskentakaavat.validointi.PAINOTETTUKESKIARVO.parillinenmaarafunktioargumentteja = Painotetulla keskiarvolla täytyy olla parillinen määrä funktioargumentteja
+
+
+
+
+
