erikoismerkit vaihdettu ääkkösiksi

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -4,7 +4,7 @@
 koekutsuvaihe.header					= Koekutsuvaiheen muokkaus
 
 jononmuokkaus.header					= Jonon muokkaus
-jononmuokkaus.siirretaan.sijoitteluun	= Siirret\u00E4\u00E4n sijoitteluun
+jononmuokkaus.siirretaan.sijoitteluun	= Siirretään sijoitteluun
 
 # yleiset
 valintaperusteet 						= Valintaperusteet
@@ -32,7 +32,7 @@ valintaperusteet.koekutsuvaihe 			= Koekutsuvaihe
 valintaperusteet.haku 					= Haku
 valintaperusteet.hae 					= Hae
 valintaperusteet.ja 					= ja
-valintaperusteet.ryhmatjakohteet		= Valintaryhm\u00E4t ja hakukohteet
+valintaperusteet.ryhmatjakohteet		= Valintaryhmät ja hakukohteet
 valintaperusteet.nimi 					= Nimi
 valintaperusteet.organisaatiot 			= Organisaatiot
 valintaperusteet.tyyppi					= Tyyppi
@@ -84,7 +84,7 @@ tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 yhteisvalinnanhallinta.synkronoi 		= Synkronoi tarjonta
 
 #etusivu (valintaryhmalistaus)
-valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
+valintaryhmatlistaus.add.valintaryhma	= Valintaryhmä
 valintaryhmatlistaus.avaapuu 			= Avaa puu
 valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
 valintaryhmatlistaus.hakukohteitasisaltavat = Vain hakukohteita sisältävät ryhmät
@@ -163,7 +163,7 @@ laskentakaavat.funktioasetukset.poistaparametri = Poista parametri
 laskentakaavat.funktioasetukset.palautahaettu = Palauta haettu arvo
 laskentakaavat.funktioasetukset.alikaavanmuokkaus = Alikaavan funktiokutsuja ei voi muokata
 laskentakaavat.funktioasetukset.kutsuntyyppi = Funktiokutsun tyyppi
-laskentakaavat.funktioasetukset.kutsuntallennus = Funktijokutsun tallentaminen laskentakaavana
+laskentakaavat.funktioasetukset.kutsuntallennus = Funktiokutsun tallentaminen laskentakaavana
 laskentakaavat.funktioasetukset.valintaperusteviitteet = Valintaperusteviitteet
 laskentakaavat.funktioasetukset.arvomuunnin = Arvomuunnin
 laskentakaavat.funktioasetukset.konversiomaarittelyt = Konversiomäärittelyt
