--- a/src/main/webapp/common/i18n/messages_en_US.properties
+++ b/src/main/webapp/common/i18n/messages_en_US.properties
@@ -1,10 +1,5 @@
 #  (\u00F6)
-valintaryhmatlistaus.header				= Valintaryhm\u00E4t ja hakukohteet
-valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
-valintaryhmatlistaus.add.hakukohde		= Hakukohde
 
-valintaryhmalomake.valinnanvaihe	= valinnanvaihe
-valintaryhmalomake.koekutsuvaihe	= koekutsuvaihe
 
 koekutsuvaihe.header					= Koekutsuvaiheen muokkaus
 
@@ -12,8 +7,265 @@ jononmuokkaus.header					= Jonon muokkaus
 jononmuokkaus.siirretaan.sijoitteluun	= Siirret\u00E4\u00E4n sijoitteluun
 
 # yleiset
-valintaperusteet.periytyy.false			= ei periydy
-valintaperusteet.periytyy.true			= periytyy
-valintaperusteet.tyyppi.TAVALLINEN		= tavallinen
-valintaperusteet.tyyppi.VALINTAKOE		= koekutsu
+valintaperusteet 						= Valintaperusteet
+valintaperusteet.hakukohde				= Hakukohde
+valintaperusteet.valintaryhma			= Valintaryhmä
+valintaperusteet.periytyy.false			= Ei periydy
+valintaperusteet.periytyy.true			= Periytyy
+valintaperusteet.peritty 				= Peritty
+valintaperusteet.tyyppi.TAVALLINEN		= Tavallinen
+valintaperusteet.tyyppi.VALINTAKOE		= Koekutsu
+valintaperusteet.kuvaus 				= Kuvaus
+valintaperusteet.aloituspaikat			= Aloituspaikat
+valintaperusteet.laskentakaava 			= Laskentakaava
+valintaperusteet.laskentakaavat 		= Laskentakaavat
+valintaperusteet.poista 				= Poista
+valintaperusteet.tallenna 				= Tallenna
+valintaperusteet.maara 					= Määrä
+valintaperusteet.takaisin 				= Takaisin
+valintaperusteet.kiintio 				= Kiintiö
+valintaperusteet.liita 					= Liitä
+valintaperusteet.julkaistu 				= Julkaistu
+valintaperusteet.valinnanvaihe 			= Valinnan vaihe'
+valintaperusteet.valinnanvaiheet 		= Valinnan vaiheet
+valintaperusteet.koekutsuvaihe 			= Koekutsuvaihe
+valintaperusteet.haku 					= Haku
+valintaperusteet.hae 					= Hae
+valintaperusteet.ja 					= ja
+valintaperusteet.ryhmatjakohteet		= Valintaryhm\u00E4t ja hakukohteet
+valintaperusteet.nimi 					= Nimi
+valintaperusteet.organisaatiot 			= Organisaatiot
+valintaperusteet.tyyppi					= Tyyppi
+valintaperusteet.oid 					= Tunniste
+valintaperusteet.tunniste 				= Tunniste
+valintaperusteet.kiintio 				= Kiintiö
+valintaperusteet.hakijaryhmat 			= Hakijaryhmät
+valintaperusteet.hakijaryhma 			= Hakijaryhmä
+valintaperusteet.koodi 					= Koodi
+valintaperusteet.arvo 					= Arvo
+valintaperusteet.tasasijasaanto 		= Tasasijasääntö
+valintaperusteet.ylitaytto 				= Ylitäyttö
+valintaperusteet.alitaytto 				= Alitäyttö
+valintaperusteet.arvonta 				= Arvonta
+valintaperusteet.aktiivinen 			= Aktiivinen
+valintaperusteet.metatiedot 			= Metatiedot
+valintaperusteet.kriteeri 				= Kriteeri
+valintaperusteet.jononnimi 				= Jonon nimi
+valintaperusteet.njono 					= jono
+valintaperusteet.kuuluusijoitteluun 	= Kuuluu sijoitteluun
+valintaperusteet.lisaa 					= Lisää
+valintaperusteet.muokkaa 				= Muokkaa
+valintaperusteet.siirra 				= Siirrä
+valintaperusteet.sulje 					= Sulje
+valintaperusteet.hakukohdekoodi 		= Hakukohdekoodi
+valintaperusteet.valintakoekoodi 		= Valintakoekoodi
+valintaperusteet.paivita 				= Päivitä
+valintaperusteet.hauntunniste 			= Haun tunniste
+valintaperusteet.valintakoevalinnanvaihe = Valintakoevalinnan vaihe
+valintaperusteet.tyhjenna 				= Tyhjennä
+valintaperusteet.tarjoaja				= Tarjoaja
+valintaperusteet.julkaisutila 			= Julkaisutila
+valintaperusteet.kylla 					= Kyllä
+valintaperusteet.ei 					= Ei
+valintaperusteet.tosi 					= tosi
+valintaperusteet.epatosi 				= epätosi
+valintaperusteet.pakollinentieto 		= Pakollinen tieto
+valintaperusteet.kieli 					= Kieli
+valintaperusteet.pisteet 				= Pisteet
+valintaperusteet.parametri 				= Parametri
+valintaperusteet.avain 					= Avain
+
+#tabit
+tabs.laskentakaavat 					= Laskentakaavat
+tabs.etusivu 							= Valintaryhmät ja hakukohteet
+tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
+
+#yhteisvalinnanhallinta
+yhteisvalinnanhallinta.synkronoi 		= Synkronoi tarjonta
+
+#etusivu (valintaryhmalistaus)
+valintaryhmatlistaus.add.valintaryhma	= Valintaryhm\u00E4
+valintaryhmatlistaus.avaapuu 			= Avaa puu
+valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
+valintaryhmatlistaus.hakukohteitasisaltavat = Vain hakukohteita sisältävät ryhmät
+valintaryhmatlistaus.hakukohteet 		= Vain hakukohteet
+valintaryhmatlistaus.hakupalautti 		= Haku palautti
+valintaryhmatlistaus.valintaryhmaa 		= valintaryhmää
+valintaryhmatlistaus.hakukohdetta 		= hakukohdetta
+valintaryhmatlistaus.naytetty 			= Näytetty
+
+#valintaryhma
+valintaryhma.ylavalintaryhma 			= Ylävalintaryhmä
+valintaryhma.hakukohdekoodit 			= Hakukohdekoodit
+valintaryhma.valintakoekoodit 			= Valintakoekoodit
+valintaryhma.uusivalintakoekoodi 		= Uusi valintakoekoodi
+valintaryhma.uusihakukohdekoodi 		= Uusi hakukohdekoodi
+valintaryhma.valintakoekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään valintakoekoodia
+valintaryhma.hakukohdekoodit.eiliitettyja = Tähän valintaryhmään ei ole vielä liitetty yhtään hakukohdekoodia
+
+#hakukohde
+hakukohde.siirravalintaryhmaan 			= Siirrä hakukohde toiseen valintaryhmään
+hakukohde.muokkaus 						= Hakukohteen muokkaus
+hakukohde.nimi 							= Hakukohteen nimi
+hakukohde.luonti						= Hakukohteen luonti
+hakukohde.tunniste 						= Hakukohteen tunniste
+
+
+#valintaperusteet
+valintatapajono.kaytetaanvalintalaskentaa = Käytetään valintalaskentaa
+valintatapajono.ehdontayttavathyvaksytaan = Kaikki ehdon täyttävät hyväksytään
+valintatapajono.varasija.kasittelysaannot = Varasijakäsittelysäännöt
+valintatapajono.varasija.eitayttoa 		= Ei varasijatayttoa
+valintatapajono.varasija.eitayttoaohje 	= Jos valittu, sijoittelu pyrkii ainoastaan valitsemaan aloituspaikkojen mukaisen määrän jonon alusta, jättäen hylätyt huomioimatta. Varasijoille jääviä ei huomioida.
+valintatapajono.varasija.kaytetaanalkaen = Varasijasääntöjä käytetään alkaen
+valintatapajono.varasija.taytetaanasti 	= Varasijoja täytetään asti
+valintatapajono.varasija.huomioitavienmaararajattu = Huomioitavien varasijojen määrä rajattu
+valintatapajono.varasija.tayttopoissaolevientilalle = Varasijatäyttö poissa olevaksi ilmoittautuneiden tilalle
+valintatapajono.varasija.jostayttamattomiaohje = Jos jonoon jää täyttämättömiä aloituspaikkoja, niitä täytetään jonosta
+valintatapajono.muodostumiskriteerit.jono = Jonon muodostumiskriteerit
+valintatapajono.muodostumiskriteeri.tallennalisataksesi = Tallenna jono lisätäksesi kriteeri.
+valintatapajono.jonot 					= Valintatapajonot
+valintatapajono.hakijaryhmat.eisijoitteluun = Valintatapajonoa ei siirretä sijoitteluun. Hakijaryhma ei vaikuta jonoon.
+valintatapajono.hakijaryhmat.liita 		= Liitä hakijaryhmä
+valintatapajono.hakijaryhmat.tallennalisataksesi = Tallenna jono lisätäksesi hakijaryhma.
+
+#valintakoe
+valintakoe.lahetetaankokutsut 			= Lähetetäänkö koekutsut
+valintakoe.kutsutaankokaikki 			= Kutsutaanko kaikki
+valintakoe.Laskentakaava 				= Valintakokeen laskentakaava
+valintakoe.kokeet 						= Valintakokeet
+
+#hakijaryhma
+hakijaryhma.liitetytjonot 				= Liitetyt valintatapajonot
+
+
+#laskentakaavat
+laskentakaavat.hallinta 				= Laskentakaavojen hallinta
+laskentakaavat.lista 					= Laskentakaavalista
+laskentakaavat.eiluotuja 				= Yhtään laskentakaavaa ei ole luotu
+laskentakaavat.valintaryhmalleeiluotuja = Tälle valintaryhmälle ei ole luotu yhtään laskentakaavaa
+laskentakaavat.hakukohteelleeiluotuja 	= Tälle hakukohteelle ei ole luotu yhtään laskentakaavaa
+laskentakaavat.uusi 					= Uusi laskentakaava
+laskentakaavat.luonti 					= Uuden laskentakaavan luonti
+laskentakaavat.alusta 					= Alusta uusi laskentakaava
+laskentakaavat.tyyppi 					= Laskentakaavan tyyppi
+laskentakaavat.kuvaus 					= Laskentakaavan kuvaus
+laskentakaavat.nimi 					= Laskentakaavan nimi
+laskentakaavat.lukuarvofunktio 			= Lukuarvofunktio
+laskentakaavat.totuusarvofunktio 		= Totuusarvofunktio
+laskentakaavat.muokkaus 				= Laskentakaavan muokkaus
+laskentakaavat.generoitunniste 			= Generoi tunniste
+
+laskentakaavat.funktioasetukset 		= Funktioasetukset
+laskentakaavat.funktioasetukset.hylkaysperuste = Hylkäysperuste
+laskentakaavat.funktioasetukset.hylkaysperustekuvaukset = Hylkäysperustekuvaukset
+laskentakaavat.funktioasetukset.poistaparametri = Poista parametri
+laskentakaavat.funktioasetukset.palautahaettu = Palauta haettu arvo
+laskentakaavat.funktioasetukset.alikaavanmuokkaus = Alikaavan funktiokutsuja ei voi muokata
+laskentakaavat.funktioasetukset.kutsuntyyppi = Funktiokutsun tyyppi
+laskentakaavat.funktioasetukset.kutsuntallennus = Funktijokutsun tallentaminen laskentakaavana
+laskentakaavat.funktioasetukset.valintaperusteviitteet = Valintaperusteviitteet
+laskentakaavat.funktioasetukset.arvomuunnin = Arvomuunnin
+laskentakaavat.funktioasetukset.konversiomaarittelyt = Konversiomäärittelyt
+laskentakaavat.funktioasetukset.arvonmaarittelyt = Arvon määrittelyt
+laskentakaavat.funktioasetukset.maarite = Määrite
+laskentakaavat.funktioasetukset.tallennatulos = Tallenna tulos
+laskentakaavat.funktioasetukset.tulostunniste = Tulostunniste
+laskentakaavat.funktioasetukset.tulosteksti = Tulosteksti
+laskentakaavat.funktioasetukset.tallennettavakutsu = Laskentakaavaksi tallennettava funktiokutsu
+laskentakaavat.funktioasetukset.osantallennus = Kaavan osan tallennus
+laskentakaavat.funktioasetukset.poistakutsu = Poista funktiokutsu
+laskentakaavat.funktioasetukset.palaaasetuksiin = Palaa funktioasetuksiin
+laskentakaavat.funktioasetukset.tallennauutenakaavana = Tallenna uutena laskentakaavana
+laskentakaavat.funktioasetukset.haettava_arvo = Arvo hakemukselta
+laskentakaavat.funktioasetukset.syotettava_arvo = Syötettävä arvo
+laskentakaavat.funktioasetukset.hakukohteen_arvo = Hakukohteen arvo
+laskentakaavat.funktioasetukset.hakukohteen_syotettava_arvo = Hakukohteen syötettävä arvo
+laskentakaavat.funktioasetukset.ohje.tallenna = Muista tallentaa muutoksesi
+laskentakaavat.funktioasetukset.ohje.muutos = Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä
+
+laskentakaavat.viiteasetukset.viitteenvalinta = Laskentakaavaviitteen valinta
+laskentakaavat.viiteasetukset.alikaavanviite = Alikaavan laskentakaavaviite
+laskentakaavat.viiteasetukset.valitunnimi = Valitun laskentakaavaviitteen nimi
+laskentakaavat.viiteasetukset.alikaavanviitemuokkaus = Alikaavan laskentakaavaviitteitä ei voi vaihtaa. Voit kuitenkin siirtyä suoraan valitsemasi laskentakaavan muokkaukseen kynä-ikonista.
+laskentakaavat.viiteasetukset.poista 	= Poista laskentakaavaviite
+
+laskentakaavat.puu.eivoitutallentaa 	= Laskentakaavaa ei voitu tallennettava
+laskentakaavat.puu.virheinfo 			= Alla olevasta listasta saat vihjeitä kaavan virheistä ja virheellisen funktiokutsun tapauksessa pääset muokkaamaan sitä suoraan klikkaamalla virheilmoitusta. Yritä laskentakaavan tallennusta uudestaan heti virheet korjattuasi.
+laskentakaavat.puu.funktiokutsussavirhe = Funktiokutsussa on virhe
+laskentakaavat.puu.tallennusonnistui 	= Laskentakaavan tallennus onnistui
+laskentakaavat.puu.paras 				= paras
+laskentakaavat.puu.huonoin 				= huonoin
+laskentakaavat.puu.keskiarvonparasta 	= suurimman keskiarvo
+laskentakaavat.puu.summanparasta 		= suurimman summa
+laskentakaavat.puu.hakutoive 			= hakutoive
+laskentakaavat.puu.summa 				= Summa
+laskentakaavat.puu.osoittaja 			= osoittaja
+laskentakaavat.puu.nimittaja 			= Nimittäjä
+laskentakaavat.puu.lukuarvo 			= Lukuarvo
+laskentakaavat.puu.painotuskerroin		= Painotuskerroin
+laskentakaavat.puu.funktioargumentti 	= Funktioargumentti
+laskentakaavat.puu.vasenoperandi 		= Vasen operandi
+laskentakaavat.puu.oikeaoperandi 		= Oikea operandi
+laskentakaavat.puu.ehto 				= Ehto
+laskentakaavat.puu.sitten 				= Sitten
+laskentakaavat.puu.muuten 				= Muuten
+laskentakaavat.puu.lisaafunktio			= Lisää uusi funktiokutsu
+
+laskentakaavat.funktiokutsu.NIMETTYLUKUARVO = Nimetty lukuarvo
+laskentakaavat.funktiokutsu.NIMETTYTOTUUSARVO = Nimetty totuusarvo
+laskentakaavat.funktiokutsu.HAELUKUARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.LUKUARVO 	= Vakio
+laskentakaavat.funktiokutsu.SUMMA 		= Summa
+laskentakaavat.funktiokutsu.JOS 		= Jos
+laskentakaavat.funktiokutsu.TULO 		= Tulo
+laskentakaavat.funktiokutsu.OSAMAARA 	= Osamäärä
+laskentakaavat.funktiokutsu.KESKIARVO 	= Keskiarvo
+laskentakaavat.funktiokutsu.MEDIAANI 	= Mediaani
+laskentakaavat.funktiokutsu.MINIMI 		= Minimi  
+laskentakaavat.funktiokutsu.MAKSIMI 	= Maksimi
+laskentakaavat.funktiokutsu.SUMMANPARASTA = N parasta summa
+laskentakaavat.funktiokutsu.KESKIARVONPARASTA = N parasta keskiarvo
+laskentakaavat.funktiokutsu.NMAKSIMI 	= N paras
+laskentakaavat.funktiokutsu.NMINIMI 	= N huonoin
+laskentakaavat.funktiokutsu.NEGAATIO 	= Negaatio
+laskentakaavat.funktiokutsu.PYORISTYS 	= Pyöristys
+laskentakaavat.funktiokutsu.HYLKAA 		= Hylkää 
+laskentakaavat.funktiokutsu.HYLKAAARVOVALILLA = Hylkää arvovälillä
+laskentakaavat.funktiokutsu.KONVERTOILUKUARVO = Konvertoi lukuarvo
+laskentakaavat.funktiokutsu.HAEOSAKOEARVOSANA = YO-osakoearvosana
+laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOILUKUARVOKSI = Hae merkkijono ja konvertoi lukuarvoksi
+laskentakaavat.funktiokutsu.SKAALAUS 	= Skaalaus
+laskentakaavat.funktiokutsu.PAINOTETTUKESKIARVO = Painotettu keskiarvo
+laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
+laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
+laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.TAI 		= Tai
+laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
+laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
+laskentakaavat.funktiokutsu.YHTASUURI = Yhtä suuri
+laskentakaavat.funktiokutsu.PIENEMPI = Pienempi
+laskentakaavat.funktiokutsu.PIENEMPITAIYHTASUURI = Pienempi tai yhtä suuri
+laskentakaavat.funktiokutsu.EI = Ei 
+laskentakaavat.funktiokutsu.TOTUUSARVO = Totuusarvo
+laskentakaavat.funktiokutsu.JA = Ja 
+laskentakaavat.funktiokutsu.DEMOGRAFIA = Demografia
+laskentakaavat.funktiokutsu.HAKUTOIVE = Hakutoive
+laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI = Hae merkkijono ja konvertoi totuusarvoksi
+laskentakaavat.funktiokutsu.HAEMERKKIJONOJAVERTAAYHTASUURUUS = Hae merkkijono ja vertaa yhtäsuuruus
+laskentakaavat.funktiokutsu.VALINTAPERUSTEYHTASUURUUS = Valintaperusteyhtasuuruus
+laskentakaavat.funktiokutsu.LASKENTAKAAVAVIITE = Viittaus toiseen kaavaan
+
+laskentakaavat.validointi.tulostunnistepuuttuu = tulostunniste täytyy määritellä, jos Tallenna tulos -kenttä on valittu
+laskentakaavat.validointi.pakollisiafunktioargumentteja = Nimetyt funktioargumentit ovat pakollisia. Funktiokutsun X funktioargumenttia ei ole määritelty
+laskentakaavat.validointi.yksipakollinenfunktioargumentti = Funktiokutsulle ei ole määritelty yhtään funktioargumenttia. Tälle funktiokutsulle on määriteltävä vähintään yksi funktioargumentti
+laskentakaavat.validointi.funktiokutsulleonmaaritelty = Funktiokutsulle on määritelty
+laskentakaavat.validointi.pakollistafunktioargumenttia = X kpl pakollista funktioargumenttia
+laskentakaavat.validointi.PAINOTETTUKESKIARVO.kaksifunktioargumenttia = Painotetulle keskiarvolle täytyy määritellä vähintään kaksi funktioargumenttia
+laskentakaavat.validointi.PAINOTETTUKESKIARVO.puuttuvafunktioargumentti = Painotetun keskiarvon funktioargumenttilistan keskellä ei voi olla määrittelemättömiä funktioargumentteja
+laskentakaavat.validointi.PAINOTETTUKESKIARVO.parillinenmaarafunktioargumentteja = Painotetulla keskiarvolla täytyy olla parillinen määrä funktioargumentteja
+
+
+
+
 
