--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -181,6 +181,8 @@ laskentakaavat.funktioasetukset.haettava_arvo = Arvo hakemukselta
 laskentakaavat.funktioasetukset.syotettava_arvo = Syötettävä arvo
 laskentakaavat.funktioasetukset.hakukohteen_arvo = Hakukohteen arvo
 laskentakaavat.funktioasetukset.hakukohteen_syotettava_arvo = Hakukohteen syötettävä arvo
+laskentakaavat.funktioasetukset.ohje.tallenna = Muista tallentaa muutoksesi
+laskentakaavat.funktioasetukset.ohje.muutos = Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä
 
 laskentakaavat.viiteasetukset.viitteenvalinta = Laskentakaavaviitteen valinta
 laskentakaavat.viiteasetukset.alikaavanviite = Alikaavan laskentakaavaviite
