VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -266,6 +266,8 @@ laskentakaavat.validointi.PAINOTETTUKESKIARVO.puuttuvafunktioargumentti = Painot
 laskentakaavat.validointi.PAINOTETTUKESKIARVO.parillinenmaarafunktioargumentteja = Painotetulla keskiarvolla täytyy olla parillinen määrä funktioargumentteja
 
 
-
-
-
+yhteisvalinnanhallinta.header=Yhteisvalinnan hallinta
+yhteisvalinnanhallinta.etusivu=Valintaryhm\u00E4t ja hakukohteet
+yhteisvalinnanhallinta.laskentakaava=Laskentakaavat
+yhteisvalinnanhallinta.import=Yhteisvalinnan hallinta
+yhteisvalinnanhallinta.synkronoi=Synkronoi tarjonta
