--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -80,8 +80,6 @@ tabs.laskentakaavat 					= Laskentakaavat
 tabs.etusivu 							= Valintaryhmät ja hakukohteet
 tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 
-#yhteisvalinnanhallinta
-yhteisvalinnanhallinta.synkronoi 		= Synkronoi tarjonta
 
 #etusivu (valintaryhmalistaus)
 valintaryhmatlistaus.add.valintaryhma	= Valintaryhmä
@@ -265,9 +263,49 @@ laskentakaavat.validointi.PAINOTETTUKESKIARVO.kaksifunktioargumenttia = Painotet
 laskentakaavat.validointi.PAINOTETTUKESKIARVO.puuttuvafunktioargumentti = Painotetun keskiarvon funktioargumenttilistan keskellä ei voi olla määrittelemättömiä funktioargumentteja
 laskentakaavat.validointi.PAINOTETTUKESKIARVO.parillinenmaarafunktioargumentteja = Painotetulla keskiarvolla täytyy olla parillinen määrä funktioargumentteja
 
-
 yhteisvalinnanhallinta.header=Yhteisvalinnan hallinta
-yhteisvalinnanhallinta.etusivu=Valintaryhm\u00E4t ja hakukohteet
-yhteisvalinnanhallinta.laskentakaava=Laskentakaavat
-yhteisvalinnanhallinta.import=Yhteisvalinnan hallinta
+
+common.etusivu=Valintaryhm\u00E4t ja hakukohteet
+common.laskentakaava=Laskentakaavat
+common.import=Yhteisvalinnan hallinta
+
 yhteisvalinnanhallinta.synkronoi=Synkronoi tarjonta
+
+valintatapajono.header=Jonon muokkaus
+valintatapajono.jononnimi=Jonon nimi
+valintatapajono.kuvaus=Kuvaus
+valintatapajono.aloituspaikat=Aloituspaikat
+valintatapajono.siirretaansijoitteluun=Siirret\u00E4\u00E4n sijoitteluun
+valintatapajono.kaytetaan=K\u00E4ytet\u00E4\u00E4n valintalaskentaa
+valintatapajono.kaikkiehdon=Kaikki ehdon t\u00E4ytt\u00E4v\u00E4t hyv\u00E4ksyt\u00E4\u00E4n
+valintatapajono.tasasijasaanto=Tasasijas\u00E4\u00E4nt\u00F6
+valintatapajono.ylitaytto=Ylit\u00E4ytt\u00F6
+valintatapajono.alitaytto=Alit\u00E4ytt\u00F6
+valintatapajono.arvonta=Arvonta
+valintatapajono.varasijakasittelysaannot=Varasijak\u00E4sittelys\u00E4\u00E4nn\u00F6t
+valintatapajono.eivarasijatayttoa=Ei varasijat\u00E4ytt\u00F6\u00E4
+valintatapajono.josvalittu=Jos valittu, sijoittelu pyrkii ainoastaan valitsemaan aloituspaikkojen mukaisen m\u00E4\u00E4r\u00E4n jonon alusta, j\u00E4tt\u00E4en hyl\u00E4tyt huomioimatta. Varasijoille j\u00E4\u00E4vi\u00E4 ei huomioida.
+valintatapajono.varasijasaantoja=Varasijas\u00E4\u00E4nt\u00F6j\u00E4 k\u00E4ytet\u00E4\u00E4n alkaen
+valintatapajono.varasijoja=Varasijoja t\u00E4ytet\u00E4\u00E4n asti
+valintatapajono.huomioitavien=Huomioitavien varasijojen m\u00E4\u00E4r\u00E4 rajattu
+valintatapajono.varasijataytto=Varasijat\u00E4ytt\u00F6 poissa olevaksi ilmoittautuneiden tilalle
+valintatapajono.josjonoon=Jos jonoon j\u00E4\u00E4 t\u00E4ytt\u00E4m\u00E4tt\u00F6mi\u00E4 aloituspaikkoja, niit\u00E4 t\u00E4ytet\u00E4\u00E4n jonosta
+valintatapajono.jono=jono
+valintatapajono.muodostumiskriteerit=Jonon muodostumiskriteerit
+valintatapajono.aktiivinen=Aktiivinen
+valintatapajono.laskentakaava=Laskentakaava
+valintatapajono.metatiedot=Metatiedot
+valintatapajono.peritty=Peritty
+valintatapajono.poista=Poista
+valintatapajono.kriteeri=Kriteeri
+valintatapajono.tallennajono=Tallenna jono lis\u00E4t\u00E4ksesi kriteeri.
+valintatapajono.hakijaryhmat=Hakijaryhm\u00E4t
+valintatapajono.eisiirreta=Valintatapajonoa ei siirret\u00E4 sijoitteluun. Hakijaryhm\u00E4 ei vaikuta jonoon.
+valintatapajono.nimi=Nimi
+valintatapajono.maara=M\u00E4\u00E4r\u00E4
+valintatapajono.periytyy=Periytyy
+valintatapajono.liita=Liit\u00E4 hakijaryhm\u00E4
+valintatapajono.tallennahakijaryhma=Tallenna jono lis\u00E4t\u00E4ksesi hakijaryhm\u00E4.
+valintatapajono.muista=Muista tallentaa muutoksesi
+valintatapajono.takaisin=Takaisin
+valintatapajono.tallenna=Tallenna
