VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -38,7 +38,6 @@ valintaperusteet.organisaatiot 			= Organisaatiot
 valintaperusteet.tyyppi					= Tyyppi
 valintaperusteet.oid 					= Tunniste
 valintaperusteet.tunniste 				= Tunniste
-valintaperusteet.kiintio 				= Kiintiö
 valintaperusteet.hakijaryhmat 			= Hakijaryhmät
 valintaperusteet.hakijaryhma 			= Hakijaryhmä
 valintaperusteet.koodi 					= Koodi
@@ -83,14 +82,10 @@ tabs.yhteisvalinnanhallinta 			= Yhteisvalinnan hallinta
 
 #etusivu (valintaryhmalistaus)
 valintaryhmatlistaus.add.valintaryhma	= Valintaryhmä
-valintaryhmatlistaus.avaapuu 			= Avaa puu
 valintaryhmatlistaus.valmiitjajulkaistut = Vain valmiit ja julkaistut
 valintaryhmatlistaus.hakukohteitasisaltavat = Vain hakukohteita sisältävät ryhmät
 valintaryhmatlistaus.hakukohteet 		= Vain hakukohteet
-valintaryhmatlistaus.hakupalautti 		= Haku palautti
 valintaryhmatlistaus.valintaryhmaa 		= valintaryhmää
-valintaryhmatlistaus.hakukohdetta 		= hakukohdetta
-valintaryhmatlistaus.naytetty 			= Näytetty
 
 #valintaryhma
 valintaryhma.ylavalintaryhma 			= Ylävalintaryhmä
@@ -309,3 +304,28 @@ valintatapajono.tallennahakijaryhma=Tallenna jono lis\u00E4t\u00E4ksesi hakijary
 valintatapajono.muista=Muista tallentaa muutoksesi
 valintatapajono.takaisin=Takaisin
 valintatapajono.tallenna=Tallenna
+
+hakijaryhmavalintatapajono.header=Hakijaryhm\u00E4n liitt\u00E4minen
+hakijaryhmavalintatapajono.hakijaryhmat=Hakijaryhm\u00E4t
+hakijaryhmavalintatapajono.nimi=Nimi
+hakijaryhmavalintatapajono.laskentakaava=Laskentakaava
+hakijaryhmavalintatapajono.kiintio=Kiinti\u00F6
+hakijaryhmavalintatapajono.periytyy=Periytyy
+hakijaryhmavalintatapajono.liita=Liit\u00E4
+hakijaryhmavalintatapajono.muista=Muista tallentaa muutoksesi
+hakijaryhmavalintatapajono.takaisin=Takaisin
+
+valintaryhmatlistaus.header=Valintaperusteet
+valintaryhmatlistaus.avaapuu=Avaa puu
+valintaryhmatlistaus.haku=Haku
+valintaryhmatlistaus.hae=Hae
+valintaryhmatlistaus.suodatahakukohteita=Suodata hakukohteita
+valintaryhmatlistaus.vainvalmiit=Vain valmiit ja julkaistut
+valintaryhmatlistaus.vainhakukohteita=Vain hakukohteita sis\u00E4lt\u00E4v\u00E4t ryhm\u00E4t
+valintaryhmatlistaus.vainhakukohteet=Vain hakukohteet
+valintaryhmatlistaus.hakupalautti=Haku palautti
+valintaryhmatlistaus.valintaryhmaaja=valintaryhm\u00E4\u00E4 ja
+valintaryhmatlistaus.hakukohdetta=hakukohdetta
+valintaryhmatlistaus.naytetty=N\u00E4ytetty
+valintaryhmatlistaus.hakukohde=Hakukohde
+valintaryhmatlistaus.valintaryhma=Valintaryhm\u00E4
