VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -329,3 +329,51 @@ valintaryhmatlistaus.hakukohdetta=hakukohdetta
 valintaryhmatlistaus.naytetty=N\u00E4ytetty
 valintaryhmatlistaus.hakukohde=Hakukohde
 valintaryhmatlistaus.valintaryhma=Valintaryhm\u00E4
+
+valintaryhmalomakeuusi.header=Uuden valintaryhm\u00E4n luonti
+valintaryhmalomakeuusi.ylavalintaryhma=Yl\u00E4valintaryhm\u00E4
+valintaryhmalomakeuusi.nimi=Nimi
+valintaryhmalomakeuusi.kohdejoukko=Kohdejoukko
+valintaryhmalomakeuusi.organisaatiot=Organisaatiot
+valintaryhmalomakeuusi.nimipieni=nimi
+valintaryhmalomakeuusi.tyyppi=tyyppi
+valintaryhmalomakeuusi.oid=oid
+valintaryhmalomakeuusi.poista=poista
+valintaryhmalomakeuusi.muista=Muista tallentaa muutoksesi
+valintaryhmalomakeuusi.takaisin=Takaisin
+valintaryhmalomakeuusi.tallenna=Tallenna
+
+valintaryhmalomake.header=Valintaryhm\u00E4n muokkaus
+valintaryhmalomake.nimi=Nimi
+valintaryhmalomake.tunniste=Tunniste(oid)
+valintaryhmalomake.kohdejoukko=Kohdejoukko
+valintaryhmalomake.organisaatiot=Organisaatiot
+valintaryhmalomake.oid=oid
+valintaryhmalomake.tyyppi=Tyyppi
+valintaryhmalomake.poista=Poista
+valintaryhmalomake.valinnanvaiheet=Valinnan vaiheet
+valintaryhmalomake.aktiivinen=Aktiivinen
+valintaryhmalomake.periytyy=Periytyy
+valintaryhmalomake.hakijaryhmat=Hakijaryhm\u00E4t
+valintaryhmalomake.laskentakaava=Laskentakaava
+valintaryhmalomake.kiintio=Kiinti\u00F6
+valintaryhmalomake.hakijaryhma=Hakijaryhm\u00E4
+valintaryhmalomake.muista=Muista tallentaa muutoksesi
+valintaryhmalomake.takaisin=Takaisin
+valintaryhmalomake.tallenna=Tallenna
+
+valintakoekoodit.header=Valintakoekoodit
+valintakoekoodit.uusi=Uusi valintakoekoodi
+valintakoekoodit.virhe=T\u00E4h\u00E4n valintaryhm\u00E4\u00E4n ei ole viel\u00E4 liitetty yht\u00E4\u00E4n valintakoekoodia
+valintakoekoodit.koodi=Koodi
+valintakoekoodit.arvo=Arvo
+valintakoekoodit.nimi=Nimi
+valintakoekoodit.poista=Poista
+
+hakukohdekoodit.header=Hakukohdekoodit
+hakukohdekoodit.uusi=Uusi hakukohdekoodi
+hakukohdekoodit.virhe=T\u00E4h\u00E4n valintaryhm\u00E4\u00E4n ei ole viel\u00E4 liitetty yht\u00E4\u00E4n hakukohdekoodia
+hakukohdekoodit.koodi=koodi
+hakukohdekoodit.arvo=arvo
+hakukohdekoodit.nimi=nimi
+hakukohdekoodit.poista=poista
